Update and rename animations.js to AnimationsJs.html

--- a/public/js/AnimationsJs.html
+++ b/public/js/AnimationsJs.html
@@ -1,3 +1,5 @@
+<script>
+
 // Expose all animation functions globally for index.html
 
 // Confetti Cannon (one-shot, realistic) + optional sound.
@@ -576,3 +578,5 @@ if (typeof document !== 'undefined') {
         console.log('🎉 Dashboard animations enabled! (already loaded)');
     }
 }
+</script>
+
