--- a/public/js/NotificationsJs.html
+++ b/public/js/NotificationsJs.html
@@ -1,3 +1,4 @@
+<script>
 (() => {
     const STATE = {
         boot: null,
@@ -704,3 +705,4 @@
         checkBadges: updateBadges
     };
 })();
+</script>
