--- a/public/js/PmJs.html
+++ b/public/js/PmJs.html
@@ -1,4 +1,4 @@
-
+<script>
 function loadPM(pm) {
   // Impersonation Support: URL email overrides session logic
   const urlParams = new URLSearchParams(window.location.search);
@@ -1023,3 +1023,4 @@ document.addEventListener('DOMContentLoaded', () => {
     });
   }
 });
+</script>
