--- a/public/js/CoreJs.html
+++ b/public/js/CoreJs.html
@@ -1,3 +1,4 @@
+<script>
 /* ================= GLOBALS & STATE ================= */
 let BOOT = null;
 let MINE_ROWS = [], PM_ROWS = [], OPS_ROWS = [];
@@ -1241,3 +1242,4 @@ function render() {
 
 document.addEventListener('DOMContentLoaded', init);
 /* End Refactored core.js */
+</script>
